put and delete event routes
